--- a/menuTest/app/src/main/res/values/strings.xml
+++ b/menuTest/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">menuTest</string>
+    <string name="start">start</string>
+    <string name="over">over</string>
 </resources>
